--- a/FantApp5/app/src/main/res/layout/fragment_register.xml
+++ b/FantApp5/app/src/main/res/layout/fragment_register.xml
@@ -12,24 +12,12 @@
         android:layout_width="210sp"
         android:layout_height="wrap_content"
         android:text="@string/action_reg_button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
         app:layout_constraintVertical_bias="0.364" />
 
-    <Button
-        android:id="@+id/loginbtn"
-        android:layout_width="210sp"
-        android:layout_height="wrap_content"
-        android:text="@string/action_login_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regButton"
-        app:layout_constraintVertical_bias="0.216" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -82,7 +70,7 @@
         android:text="@string/register_header"
         android:textColor="#000"
         android:textSize="50sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextNameOnLogin"
+        app:layout_constraintBottom_toTopOf="@+id/editTextName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
