--- a/FantApp5/app/src/main/res/values/styles.xml
+++ b/FantApp5/app/src/main/res/values/styles.xml
@@ -12,5 +12,8 @@
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+    <style name="myDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
 
+    </style>
 </resources>
